# shorty

./: .envrc  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.sqlx/: query-6de2ba1ba664317f82867f1bcb6371f1cdf0d14176f6af46128e0d2f313cbe52.json  query-e861059ffbab147059bc30af12cad5550ac7616dc83966b95fa327c23d33b06f.json
migrations/: 20241202173735_the_big_migrate.sql
src/: encoder.rs  main.rs  ui.rs
static/: custom.css  main.js
